tests/sysy/valid/runtime_putf_time.sy
int main() {
    starttime();
    putf("v=%d\n", 1);
    stoptime();
    return 0;
}
