tests/sysy/invalid/short_circuit_outside_condition.sy
int f() {
    return 1;
}

int g() {
    return 0;
}

int main() {
    int a = f() && g();
    return a;
}
